--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.5",
     "morgan": "^1.10.0",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
